--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
 			Hra za čias viktoriánskeho anglicka, ale so slovanskou mytológiou.
 		</p>
 
+		<p class="bg">
+			Vybuduj si svoje impérium!
+		</p>
+
 		<p>
 			Vyšetrovanie vraždy. Boj s nepriateľmi. Zbieranie predmetov. Hutná atmosféra.
 		</p>
