--- a/index.html
+++ b/index.html
@@ -110,26 +110,31 @@
 
 		<p class="bg">
 			Hra za čias viktoriánskeho anglicka, ale so slovanskou mytológiou.
+			<a href="https://www.youtube.com/watch?v=MJeNG1R7FzM&t=1198s&ab_channel=AmbienceofYesteryear" target="_blank">Inšpiratívne zvuky</a>
 		</p>
 
 		<p class="bg">
 			Vybuduj si svoje impérium!
 		</p>
 
-		<p>
+		<p class="bg">
 			Vyšetrovanie vraždy. Boj s nepriateľmi. Zbieranie predmetov. Hutná atmosféra.
 		</p>
 
-		<p>
+		<p class="bg">
 			Plnenie úloh, návšteva obchodníkov.
 		</p>
 
-		<p>
+		<p class="bg">
 			Zbieranie predmetov.
 		</p>
 
-		<p>
+		<p class="bg">
 			Predvytvorené postavy a ich vylepšovanie.
+		</p>
+
+		<p>
+			Browserová hra (PC/Tablet), Angular (rxjs, ngrx) Spočiatku iba frontend, neskôr backend (PHP, mysql/sqlite).
 		</p>
 
 		<div class="flex">
