Presťahovanie vzoru do ng

--- a/original-index.html
+++ b/original-index.html
@@ -71,7 +71,7 @@
 		top: 0px;
 		height: 100vh;
 		width: calc(100% - 300px);
-		background: url(./poz.png);
+		background: url(./projects/imperium/src/assets/poz.png);
 	}
 	hr {
 		border: 0;
@@ -149,9 +149,9 @@
 		</div>
 
 		<div class="flex">
-			<img src="./bg.jpg">
-			<img src="./mec.png" width="250px">
-			<img src="./dom.png">
+			<img src="./projects/imperium/src/assets/bg.jpg">
+			<img src="./projects/imperium/src/assets/mec.png" width="250px">
+			<img src="./projects/imperium/src/assets/dom.png">
 		</div>
 	</div>
 
